...
    </dependencies>
    <scenes>
        <!--Master-->
        <scene sceneID="pY4-Hu-kfo">
            <objects>
                <navigationController title="Master" id="RMx-3f-FxP" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Basket" image="basket" badgeValue="20 CHF" selectedImage="basket" id="J6m-BV-YS0"/>
                    <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Pmd-2v-anx">
                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="6pp-ht-fJK" kind="relationship" relationship="rootViewController" id="xqU-5j-MpT"/>
...
            <point key="canvasLocation" x="340" y="-1113"/>
        </scene>
        <!--Shop-->
        <scene sceneID="7JT-r7-9mv">
            <objects>
                <navigationController id="jIp-bW-02S" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Shop" image="shop" selectedImage="shop" id="rkW-HE-BII"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ckX-Rp-QeS">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="7bK-jq-Zjz" kind="relationship" relationship="rootViewController" id="cJL-5v-gvy"/>
...
                        <connections>
                            <outlet property="dataSource" destination="6pp-ht-fJK" id="mV8-gV-AIe"/>
                            <outlet property="delegate" destination="6pp-ht-fJK" id="Pxr-Ls-2OY"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Basket" id="KKn-pZ-Cw8">
                        <barButtonItem key="leftBarButtonItem" title="Empty" id="P6z-QL-0HU">
                            <connections>
                                <action selector="emptyBasketWithSender:" destination="6pp-ht-fJK" id="lzC-sA-H3b"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Checkout" style="done" id="Qdc-Cc-Myo">
                            <connections>
                                <segue destination="meO-gw-kkj" kind="presentation" id="AtA-8p-AgK"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </tableViewController>
...
                                </connections>
                            </tableView>
                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eZi-Ff-2ov">
                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                <items>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="7Kv-jS-eqH"/>
                                    <barButtonItem title="Order Now" id="MPH-Y6-obm">
                                        <connections>
                                            <action selector="orderNowWithSender:" destination="meO-gw-kkj" id="WOT-Zy-zZP"/>
                                        </connections>
                                    </barButtonItem>
                                </items>
                            </toolbar>
                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PzD-k3-R9r">
                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                <items>
                                    <navigationItem title="Review" id="76b-2Q-iKl">
                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="e8M-n9-JyD">
                                            <connections>
                                                <action selector="closeSheetWithSender:" destination="meO-gw-kkj" id="TxM-lp-bzS"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Change Currency" id="mSj-oc-ZoA">
                                            <connections>
                                                <action selector="changeCurrencyWithSender:" destination="meO-gw-kkj" id="G7B-Qv-Idf"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
...
