...
class SYCheckoutTableViewController: UIViewController {

    // MARK: - Properties
    
    let dataStack = (UIApplication.shared.delegate as! AppDelegate).dataStack
    let pickerViewDataSourceAndDelegate: UIPickerViewDelegate = PickerDataSourceAndDelegate()
    var selectedCurrency = "USD"
    var exchangeRate: Float = 1.0
    var totalPrice: Float = 0.0
    
    // MARK: -
    
    @IBOutlet weak var tableView: UITableView!
...
    // MARK: - Helpers
    
    private func currencyPicker() -> ActionSheetController {
        let pickerView = UIPickerView(frame: CGRect.zero)
        pickerView.tag = 1
        pickerView.delegate = self.pickerViewDataSourceAndDelegate
        let okAction = ActionSheetControllerAction(style: .Done, title: "Apply", dismissesActionController: true) {
            controller in
            let dataStack = (UIApplication.shared.delegate as! AppDelegate).dataStack
            dataStack.performInNewBackgroundContext { backgroundContext in
                self.selectedCurrency = self.pickerViewDataSourceAndDelegate.pickerView!(
                    pickerView, titleForRow: pickerView.selectedRow(inComponent: 0), forComponent: 0)!
                self.exchangeRate = self.getExchangeRate()
...
